@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-05-26T08:10:30Z",
+  "timestamp" : "2024-05-27T01:22:24Z",
   "count_outdated" : 7685,
   "uniques_outdated" : 3340,
-  "count" : 7811,
-  "uniques" : 3429,
+  "count" : 7812,
+  "uniques" : 3430,
   "clones" : [
     {
       "timestamp": "2024-05-13T00:00:00Z",
@@ -124,12 +124,12 @@
     },
     {
       "timestamp": "2024-05-26T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
